mlir/test/Dialect/SDFG/void_return_in_sdfg_with_result_type.mlir
// RUN: not sdfg-opt %s 2>&1 | FileCheck %s

// CHECK: error: 'sdfg.return' op has no operand, but enclosing SDFG (@test) has a result type

sdfg.sdfg @test() -> i32 {
    sdfg.return
}